--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
@@ -12,7 +12,7 @@
         @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Cases.Create)).Result.Succeeded)
         {
             <a asp-area="Litigation" asp-controller="CaseManage" asp-action="CreateOrUpdate" class="btn bg-success">
-                <i class="fa fa-plus-square"></i> Create
+                <i class="fa fa-plus-square"></i> Add New Case
             </a> 
         }
         <a id="reload" class="btn btn-primary text-white">
